# mint-analysis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  MultiSensor.py  OscilloscopeClass.py  OscilloscopeFrontend.py  README.md  ScopeVisualizer.py  multisensorfrontend.py  pyproject.toml
.github/workflows/: main.yml
attic/tests/pmt/dsp/: test_build_nnls_matrix.py  test_wf_template.py
configs/dsp/: dspeed_processing_chain.py
configs/pmt/dsp/: dsp_config.yaml
data/dcr/daq/: sample_data.txt
data/gain_cal/raw/: .pone_meets_legend_gain_95_raw.lh5.icloud
docs/: Makefile
docs/source/: conf.py  developer.rst  index.rst  user_manual.rst
docs/source/api/: __version__.rst  dsp.rst  modules.rst  raw.rst
mint_devices/: config.py  run_mint.py
mint_devices/devices/: Keithley_6482.py  Pulser.py  RTM3004.py  acoustics_comms.py
mint_devices/interface/: accoustic_interface.py  adc_interface.py  flasher_functionality.py  interposer_interface.py  mainboard_interface.py  mist_interface.py
notebooks/: full_chain_test.ipynb  gumbler_test_w_noise.ipynb  pygama_test.ipynb  wf_sims.ipynb
notebooks/pmt/: Real_data_test.ipynb  gumbler_test.ipynb  pe_calibration.ipynb  pygama_test2.ipynb  wf_sims2.ipynb
online/custom/: Oscilloscope.html  mint_dev.html
scripts/: ModuleTestClasses.py  Real_data_test.ipynb  eng_reader.py  get_info_from_db.py  gumbler_test.ipynb  gumbler_test_w_noise.ipynb  lib_pulse_reco.py  pygama_test.ipynb  pygama_test2.ipynb  wf_sims.ipynb  wf_sims2.ipynb
sequences/: acoustic_seq.py
src/mint-analysis/dsp/: build_nnls_matrix.py  template_wf.py
src/mint_analysis/: __version__.py
src/mint_analysis/dsp/: __init__.py  build_nnls_matrix.py  lib_pulse_reco.py  template_wf.py
src/mint_analysis/raw/: __init__.py
src/mintanalysis/: _version.py
src/mintanalysis/ana/: __init__.py  plot_pe_spectrum.py
src/mintanalysis/dsp/: __init__.py  build_dsp.py  build_nnls_matrix.py  lib_pulse_reco.py  template_wf.py
src/mintanalysis/pmt/ana/: __init__.py  anaCli.py  analyser_class.py  dcr_analysis.py  do_pmt_analysis.py  linear_gain_analysis.py  peSpectrumAnalyzer.py  peSpectrumAnalyzerIcetray.py  pe_spectrum_analysis.py  plot_pe_spectrum.py  uploadToDB.py  utils.py
src/mintanalysis/pmt/dsp/: __init__.py  build_dsp.py  build_nnls_database.py
src/mintanalysis/pmt/i3/: daq_to_q_frame.py  funny_heartbeat.py  inject_p_frame.py  insert_aux.py
src/mintanalysis/pmt/raw/: __init__.py  build_raw.py  eng_reader.py
tests/dsp/: test_build_nnls_matrix.py  test_wf_template.py
