
[tool.uv.workspace]
exclude = ["sim_data", "data", "dspeed"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false
py-modules = []

[tool.setuptools.package-dir]
"" = "src/mint_analysis"

[tool.setuptools.packages.find]
where = ["src/mint_analysis"]

[tool.setuptools_scm]
write_to = "src/mint_analysis/_version.py"

[project.urls]
Homepage = "https://github.com/p-one/mint-analysis"
Issues = "https://github.com/p-one/mint-analysis"


[project]
name = "mint-analysis"
description = "A software package for the analysis of data from the MINT deployment"
authors = [
    {name = "The P-One Collaboration"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dynamic = ["version"]

dependencies = [
"pygama>=2.0.0",
"legend-daq2lh5>=1.2.1",
"legend-pydataobj>=1.7",
"dspeed==1.6.2",
"numpy==1.26.2",
"numba>0.52",
"pandas",
"matplotlib",
"scipy>=1.14",
"jupyter",
"ipython",
"ipympl",
"boost_histogram<1.5",
]


[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
  "pre-commit",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_inline_tabs",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]
